@@ -18,6 +18,9 @@
 	<name>norma</name>
 	<description>A Java library for processing multiple legacy formats into normalized HTML5</description>
 
+	<properties>
+			<opennlp.version>1.6.0</opennlp.version>		
+	</properties>
 	<licenses>
 		<license>
 			<name>Apache License, Version 2.0</name>
@@ -53,6 +56,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>cobertura-maven-plugin</artifactId>
+				<version>2.7</version>
 				<configuration>
 					<check>
 						<haltOnFailure>false</haltOnFailure>
@@ -92,6 +96,7 @@
 			<plugin>
 				<groupId>com.mycila.maven-license-plugin</groupId>
 				<artifactId>maven-license-plugin</artifactId>
+				<version>1.10.b1</version>
 				<configuration>
 					<header>src/main/resources/header.txt</header>
 				</configuration>
@@ -185,7 +190,25 @@
 					</dataSet>
 				</configuration>
 			</plugin>
-			
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.5</version>
+				<configuration>
+					<source>1.5</source>
+					<target>1.5</target>
+				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-surefire-plugin</artifactId>
+				<version>2.12.4</version>
+				<configuration>
+					<forkCount>3</forkCount>
+					<reuseForks>true</reuseForks>
+					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
+				</configuration>
+</plugin>
 		</plugins>
 	</build>
 
@@ -214,6 +237,12 @@
 			<artifactId>svg2xml</artifactId>
 			<version>0.1-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.opennlp</groupId>
+			<artifactId>opennlp-tools</artifactId>
+			<version>${opennlp.version}</version>
+		</dependency>
+		
 		<!-- https://github.com/jayway/JsonPath/blob/master/README.md -->
 		<dependency>
 		    <groupId>com.jayway.jsonpath</groupId>
